Fix overflow issue where you can't close a long expanded toast

--- a/public/sass/_components.pxh-notifications.scss
+++ b/public/sass/_components.pxh-notifications.scss
@@ -14,6 +14,9 @@ $pxh-toast-max-count: 4;
   max-height: ($pxh-toast-height * $pxh-toast-max-count) + ($pxh-toast-margin * ($pxh-toast-max-count - 1));
   overflow: hidden;
   z-index: 300;
+  &--expanded {
+    overflow: auto;
+  }
   @include mq($from: md) {
     &--wide\@md {
       left: 50%;
@@ -106,7 +109,6 @@ $pxh-toast-max-count: 4;
     animation-name: pxh-toast--animate-out;
   }
   &--expanded {
-    overflow: visible;
     height: auto;
   }
 }
@@ -160,8 +162,7 @@ $pxh-toast-max-count: 4;
 
 .pxh-toast__text {
   margin: auto;
-  padding-top: $pxh-toast-margin;
-  padding-left: $pxh-toast-margin * 2;
+  padding: $pxh-toast-margin 0 $pxh-toast-margin ($pxh-toast-margin * 2);
   flex-grow: 3;
   overflow: hidden;
   position: relative;
@@ -172,23 +173,23 @@ $pxh-toast-max-count: 4;
   top: $pxh-toast-margin * 8;
   width: 100%;
   height: $pxh-toast-margin * 6;
-  padding: ($pxh-toast-margin * 2.5) 0 0 0;
+  padding: ($pxh-toast-margin * 2) 0 0 0;
   background: linear-gradient(to bottom, rgba($gray10,0) 0%, rgba($gray10,1) 50%);
   text-align: center;
+  &--expanded {
+    position: relative;
+    top: 0;
+    height: auto;
+    // padding: 0;
+    background: transparent;
+  }
 }
 
 .pxh-toast__more-button {
+  color: $white;
   text-decoration: none;
   text-transform: lowercase;
   font-size: 14px;
-}
-
-.pxh-toast__more--expanded {
-  position: relative;
-  top: 0;
-  height: auto;
-  padding: 0;
-  background: transparent;
 }
 
 .pxh-toast__dismiss {
